[gd_scene load_steps=5 format=2]

[ext_resource path="res://project/contexts/title_context/title_context_ui.gd" type="Script" id=1]
[ext_resource path="res://project/contexts/title_context/art/title2_ghostdusters.png" type="Texture" id=2]
[ext_resource path="res://project/contexts/title_context/art/title2_BG.png" type="Texture" id=3]
[ext_resource path="res://project/contexts/title_context/art/title2_play.png" type="Texture" id=4]

[node name="TitleContextUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Title" type="TextureRect" parent="."]
margin_top = 198.0
margin_right = 1921.0
margin_bottom = 580.0
texture = ExtResource( 2 )

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 827.0
margin_top = 710.0
margin_right = 1077.0
margin_bottom = 899.0
rect_pivot_offset = Vector2( 125, 95 )
texture_normal = ExtResource( 4 )

[connection signal="mouse_entered" from="StartButton" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="StartButton" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_pressed"]
